[tool.poetry]
name = "blx"
version = "0.1.0"
description = ""
authors = ["Ramon Silva <ramown.dev89@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.65.1"
uvicorn = "^0.13.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
